tests/baselines/reference/parserRealSource13.errors.txt
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(4,21): error TS6053: File 'tests/cases/conformance/parser/ecmascript5/typescript.ts' not found.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(8,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(9,39): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(10,34): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(11,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(12,34): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(13,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(14,37): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(15,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(16,34): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(17,38): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(18,39): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(19,34): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(20,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(21,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(22,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(23,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(24,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(25,32): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(26,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(27,34): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(28,32): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(29,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(30,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(31,39): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(32,44): error TS2304: Cannot find name 'Identifier'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(33,37): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(34,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(35,34): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(36,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(37,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(38,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(39,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(40,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(41,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(42,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(43,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(44,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(45,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(46,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(47,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(48,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(49,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(50,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(51,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(52,32): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(53,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(54,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(55,32): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(56,32): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(57,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(58,34): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(59,32): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(60,32): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(61,32): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(62,32): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(63,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(64,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(65,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(66,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(67,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(68,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(69,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(70,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(71,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(72,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(73,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(74,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(75,37): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(76,37): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(77,43): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(78,43): error TS2304: Cannot find name 'FuncDecl'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(79,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(80,41): error TS2304: Cannot find name 'VarDecl'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(81,37): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(82,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(83,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(84,38): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(85,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(86,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(87,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(88,32): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(89,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(90,37): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(91,37): error TS2304: Cannot find name 'Block'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(92,34): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(93,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(94,33): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(95,38): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(96,40): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(97,37): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(98,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(99,38): error TS2304: Cannot find name 'ASTList'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(100,39): error TS2304: Cannot find name 'Script'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(101,46): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(102,60): error TS2304: Cannot find name 'InterfaceDeclaration'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(103,54): error TS2304: Cannot find name 'ModuleDeclaration'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(104,47): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(105,34): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(106,40): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(107,46): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(108,37): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(109,36): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(110,37): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(111,35): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(112,37): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(113,38): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(114,37): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(117,34): error TS2304: Cannot find name 'Script'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(118,25): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(118,38): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(123,26): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(123,39): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(128,33): error TS2339: Property 'getAstWalkerFactory' does not exist on type 'typeof TypeScript'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(132,51): error TS2304: Cannot find name 'AST'.
tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts(135,36): error TS2304: Cannot find name 'NodeType'.


==== tests/cases/conformance/parser/ecmascript5/parserRealSource13.ts (116 errors) ====
    // Copyright (c) Microsoft. All rights reserved. Licensed under the Apache License, Version 2.0. 
    // See LICENSE.txt in the project root for complete license information.
    
    ///<reference path='typescript.ts' />
                        ~~~~~~~~~~~~~
!!! error TS6053: File 'tests/cases/conformance/parser/ecmascript5/typescript.ts' not found.
    
    module TypeScript.AstWalkerWithDetailCallback {
        export interface AstWalkerDetailCallback {
            EmptyCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            EmptyExprCallback? (pre, ast: AST): boolean;
                                          ~~~
!!! error TS2304: Cannot find name 'AST'.
            TrueCallback? (pre, ast: AST): boolean;
                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
            FalseCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            ThisCallback? (pre, ast: AST): boolean;
                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
            SuperCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            QStringCallback? (pre, ast: AST): boolean;
                                        ~~~
!!! error TS2304: Cannot find name 'AST'.
            RegexCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            NullCallback? (pre, ast: AST): boolean;
                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
            ArrayLitCallback? (pre, ast: AST): boolean;
                                         ~~~
!!! error TS2304: Cannot find name 'AST'.
            ObjectLitCallback? (pre, ast: AST): boolean;
                                          ~~~
!!! error TS2304: Cannot find name 'AST'.
            VoidCallback? (pre, ast: AST): boolean;
                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
            CommaCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            PosCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            NegCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            DeleteCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            AwaitCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            InCallback? (pre, ast: AST): boolean;
                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
            DotCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            FromCallback? (pre, ast: AST): boolean;
                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
            IsCallback? (pre, ast: AST): boolean;
                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
            InstOfCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            TypeofCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            NumberLitCallback? (pre, ast: AST): boolean;
                                          ~~~
!!! error TS2304: Cannot find name 'AST'.
            NameCallback? (pre, identifierAst: Identifier): boolean;
                                               ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Identifier'.
            TypeRefCallback? (pre, ast: AST): boolean;
                                        ~~~
!!! error TS2304: Cannot find name 'AST'.
            IndexCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            CallCallback? (pre, ast: AST): boolean;
                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
            NewCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            AsgCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            AsgAddCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            AsgSubCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            AsgDivCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            AsgMulCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            AsgModCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            AsgAndCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            AsgXorCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            AsgOrCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            AsgLshCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            AsgRshCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            AsgRs2Callback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            QMarkCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            LogOrCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            LogAndCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            OrCallback? (pre, ast: AST): boolean;
                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
            XorCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            AndCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            EqCallback? (pre, ast: AST): boolean;
                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
            NeCallback? (pre, ast: AST): boolean;
                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
            EqvCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            NEqvCallback? (pre, ast: AST): boolean;
                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
            LtCallback? (pre, ast: AST): boolean;
                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
            LeCallback? (pre, ast: AST): boolean;
                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
            GtCallback? (pre, ast: AST): boolean;
                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
            GeCallback? (pre, ast: AST): boolean;
                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
            AddCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            SubCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            MulCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            DivCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            ModCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            LshCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            RshCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            Rs2Callback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            NotCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            LogNotCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            IncPreCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            DecPreCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            IncPostCallback? (pre, ast: AST): boolean;
                                        ~~~
!!! error TS2304: Cannot find name 'AST'.
            DecPostCallback? (pre, ast: AST): boolean;
                                        ~~~
!!! error TS2304: Cannot find name 'AST'.
            TypeAssertionCallback? (pre, ast: AST): boolean;
                                              ~~~
!!! error TS2304: Cannot find name 'AST'.
            FuncDeclCallback? (pre, funcDecl: FuncDecl): boolean;
                                              ~~~~~~~~
!!! error TS2304: Cannot find name 'FuncDecl'.
            MemberCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            VarDeclCallback? (pre, varDecl: VarDecl): boolean;
                                            ~~~~~~~
!!! error TS2304: Cannot find name 'VarDecl'.
            ArgDeclCallback? (pre, ast: AST): boolean;
                                        ~~~
!!! error TS2304: Cannot find name 'AST'.
            ReturnCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            BreakCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            ContinueCallback? (pre, ast: AST): boolean;
                                         ~~~
!!! error TS2304: Cannot find name 'AST'.
            ThrowCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            ForCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            ForInCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            IfCallback? (pre, ast: AST): boolean;
                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
            WhileCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            DoWhileCallback? (pre, ast: AST): boolean;
                                        ~~~
!!! error TS2304: Cannot find name 'AST'.
            BlockCallback? (pre, block: Block): boolean;
                                        ~~~~~
!!! error TS2304: Cannot find name 'Block'.
            CaseCallback? (pre, ast: AST): boolean;
                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
            SwitchCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            TryCallback? (pre, ast: AST): boolean;
                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
            TryCatchCallback? (pre, ast: AST): boolean;
                                         ~~~
!!! error TS2304: Cannot find name 'AST'.
            TryFinallyCallback? (pre, ast: AST): boolean;
                                           ~~~
!!! error TS2304: Cannot find name 'AST'.
            FinallyCallback? (pre, ast: AST): boolean;
                                        ~~~
!!! error TS2304: Cannot find name 'AST'.
            CatchCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            ListCallback? (pre, astList: ASTList): boolean;
                                         ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
            ScriptCallback? (pre, script: Script): boolean;
                                          ~~~~~~
!!! error TS2304: Cannot find name 'Script'.
            ClassDeclarationCallback? (pre, ast: AST): boolean;
                                                 ~~~
!!! error TS2304: Cannot find name 'AST'.
            InterfaceDeclarationCallback? (pre, interfaceDecl: InterfaceDeclaration): boolean;
                                                               ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'InterfaceDeclaration'.
            ModuleDeclarationCallback? (pre, moduleDecl: ModuleDeclaration): boolean;
                                                         ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ModuleDeclaration'.
            ImportDeclarationCallback? (pre, ast: AST): boolean;
                                                  ~~~
!!! error TS2304: Cannot find name 'AST'.
            WithCallback? (pre, ast: AST): boolean;
                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
            LabelCallback? (pre, labelAST: AST): boolean;
                                           ~~~
!!! error TS2304: Cannot find name 'AST'.
            LabeledStatementCallback? (pre, ast: AST): boolean;
                                                 ~~~
!!! error TS2304: Cannot find name 'AST'.
            EBStartCallback? (pre, ast: AST): boolean;
                                        ~~~
!!! error TS2304: Cannot find name 'AST'.
            GotoEBCallback? (pre, ast: AST): boolean;
                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
            EndCodeCallback? (pre, ast: AST): boolean;
                                        ~~~
!!! error TS2304: Cannot find name 'AST'.
            ErrorCallback? (pre, ast: AST): boolean;
                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            CommentCallback? (pre, ast: AST): boolean;
                                        ~~~
!!! error TS2304: Cannot find name 'AST'.
            DebuggerCallback? (pre, ast: AST): boolean;
                                         ~~~
!!! error TS2304: Cannot find name 'AST'.
            DefaultCallback? (pre, ast: AST): boolean;
                                        ~~~
!!! error TS2304: Cannot find name 'AST'.
        }
    
        export function walk(script: Script, callback: AstWalkerDetailCallback): void {
                                     ~~~~~~
!!! error TS2304: Cannot find name 'Script'.
            var pre = (cur: AST, parent: AST) => {
                            ~~~
!!! error TS2304: Cannot find name 'AST'.
                                         ~~~
!!! error TS2304: Cannot find name 'AST'.
                walker.options.goChildren = AstWalkerCallback(true, cur, callback);
                return cur;
            }
    
            var post = (cur: AST, parent: AST) => {
                             ~~~
!!! error TS2304: Cannot find name 'AST'.
                                          ~~~
!!! error TS2304: Cannot find name 'AST'.
                AstWalkerCallback(false, cur, callback);
                return cur;
            }
    
            var walker = TypeScript.getAstWalkerFactory().getWalker(pre, post);
                                    ~~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'getAstWalkerFactory' does not exist on type 'typeof TypeScript'.
            walker.walk(script, null);
        }
    
        function AstWalkerCallback(pre: boolean, ast: AST, callback: AstWalkerDetailCallback): boolean {
                                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
            // See if the Callback needs to be handled using specific one or default one
            var nodeType = ast.nodeType;
            var callbackString = (<any>NodeType)._map[nodeType] + "Callback";
                                       ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
            if (callback[callbackString]) {
                return callback[callbackString](pre, ast);
            }
    
            if (callback.DefaultCallback) {
                return callback.DefaultCallback(pre, ast);
            }
    
            return true;
        }
    }